tests/baselines/reference/spreadEnum7.errors.txt
tests/cases/conformance/enums/spreadEnum7.ts(2,8): error TS2450: Enum 'LiteralEnum1' used before its declaration.
tests/cases/conformance/enums/spreadEnum7.ts(12,8): error TS2450: Enum 'R3' used before its declaration.


==== tests/cases/conformance/enums/spreadEnum7.ts (2 errors) ====
    enum R1 {
        ...LiteralEnum1,
           ~~~~~~~~~~~~
!!! error TS2450: Enum 'LiteralEnum1' used before its declaration.
!!! related TS2728 tests/cases/conformance/enums/spreadEnum7.ts:6:6: 'LiteralEnum1' is declared here.
        R1 = 'R1'
    }
    
    enum LiteralEnum1 {
        A,
        B
    }
    
    enum R2 {
        ...R3,
           ~~
!!! error TS2450: Enum 'R3' used before its declaration.
!!! related TS2728 tests/cases/conformance/enums/spreadEnum7.ts:16:6: 'R3' is declared here.
        R2 = 'R2'
    }
    
    enum R3 {
        ...R2,
        R3 = 'R3'
    }
    
    enum R4 {
        ...LiteralEnum1,
        R4 = 'R4'
    }
    
    enum R5 {
        ...LiteralEnum1,
        R5 = 'R5'
    }
    
    enum R6 {
        ...LiteralEnum1,
        ...R4,
        ...R5,
        R6 = 'R6'
    }
    
    enum PartEnum1 {
        A = 'A'
    }
    
    enum RefEnum1 {
        ...PartEnum1,
        R = 'R'
    }
    
    enum PartEnum1 {
        B = 'B'
    }
    
    enum R7 {
        B = 'B',
        ...LiteralEnum1,
        A = 'A'
    }
    